feat: added story sample.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,6 +32,7 @@ repos:
         ]
         exclude: |
           (?x)^(
+            samples/.*|
             .gitignore
           )$
   - repo: https://github.com/compilerla/conventional-pre-commit
